# ClaimBench

./: .gitignore  pyproject.toml
.pytest_cache/v/cache/: nodeids
config/: demo_contract.yaml
docs/: demo-paper-pool.md  multi-agent-architecture.md  plan.md
examples/fixtures/manifests/: smoke_test.manifest.json
examples/fixtures/smoke_workspace/: write_metrics.py
examples/manifests/: minirocket_2012_08791.manifest.json  quant_2308_00928.manifest.json  rocket_1910_13051.manifest.json
examples/papers/: gold_set_inventory.yaml
examples/reports/: minirocket_2012_08791.md  quant_2308_00928.md  rocket_1910_13051.md
scripts/: run_rocket_single_dataset.py
src/claimbench/: __init__.py  cli.py  manifest.py  mcp_server.py  onboarding.py  paths.py  repo_scanner.py  report.py
src/claimbench/agents/: __init__.py  audit_graph.py  failure_classifier.py
src/claimbench/audit/: __init__.py  errors.py  registry.py  workspace.py
src/claimbench/dashboard/: __init__.py  app.py
src/claimbench/recipes/: __init__.py  rocket_1910.py  ucr_archive.py
src/claimbench/runner/: __init__.py  (+7 more)
tests/: test_artifacts.py  test_audit.py  test_audit_graph.py  test_audit_registry.py  test_backends.py  test_cached_runs.py  test_cli.py  test_dashboard.py  test_dashboard_audit.py  test_docker_runner.py  test_failure_classifier.py  test_local_store.py  test_local_tools.py  test_manifest.py  test_mcp_audit_tools.py  test_mcp_server.py  test_repo_scanner.py  test_report.py  test_rocket_single_dataset.py  test_runner.py  test_smoke_fixture.py
tests/fixtures/: generated_manifest_smoke.json
(+7 files in other folders)
