[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimbench"
version = "0.1.0"
description = "Claim-level reproducibility auditor for ML papers."
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.22",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dashboard = [
  "gradio>=4.44",
]
mcp = [
  "mcp>=1.0",
]
models = [
  "openai>=1.0",
  "anthropic>=0.34",
  "huggingface-hub>=0.24",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
claimbench = "claimbench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claimbench = ["schemas/*.json"]
